[gd_scene load_steps=4 format=3 uid="uid://cmscnxdh7gf8m"]

[ext_resource type="Script" path="res://HUD.gd" id="1_5ff2x"]
[ext_resource type="FontFile" uid="uid://nfs2oajt8i5k" path="res://fonts/Xolonium-Regular.ttf" id="2_ac8f1"]
[ext_resource type="Texture2D" uid="uid://bxxfwkwhhhd26" path="res://art/BIG_0000_Capa-1.png" id="3_vx5h3"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5ff2x")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -82.0
offset_bottom = 84.0
grow_horizontal = 0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_direction = 2
layout_mode = 2
texture = ExtResource("3_vx5h3")

[node name="CoinScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ac8f1")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2

[node name="TimeScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ac8f1")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -81.0
offset_right = 174.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ac8f1")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -144.0
offset_right = 89.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ac8f1")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
